Flesh out neighbor search feature. Fix several layout bugs. See below.
* Autocomplete neighbor usernames. Hint at names through emails.
* Fix issue where user edit form would submit.
* Clean up implementation to be more "Backboney"

--- a/app/assets/stylesheets/partials/forms.css.sass
+++ b/app/assets/stylesheets/partials/forms.css.sass
@@ -4,6 +4,9 @@
   color: $white
   padding: 4px 2px
   font-weight: bold
+  font-size: 14px
+
+  border: 1px solid transparent
   text:
     transform: uppercase
     decoration: none
@@ -20,6 +23,8 @@
   &:active
     background-color: lighten($turquoise, 2%)
 
+  &:focus
+    border: 1px dotted #222
 
 .btn
   width: 100%
